--- a/playbook/roles/flanneld/templates/create_network.sh.j2
+++ b/playbook/roles/flanneld/templates/create_network.sh.j2
@@ -1,11 +1,13 @@
 #!/usr/bin/env bash
 
-etcdctl --ca-file={{install_dir}}/flannel/conf/etcd-ca.pem --cert-file={{install_dir}}/flannel/conf/etcd.pem \
+set -e
+
+{{install_dir}}/etcd/bin/etcdctl --ca-file={{install_dir}}/flannel/conf/etcd-ca.pem --cert-file={{install_dir}}/flannel/conf/etcd.pem \
         --key-file={{install_dir}}/flannel/conf/etcd-key.pem \
         --endpoints="{% for host in groups['etcd'] %}https://{{ hostvars[host].inventory_hostname }}:2379{% if not loop.last %},{% endif %}{% endfor %}" \
         set /coreos.com/network/config '{ "Network": "10.1.0.0/16", "Backend": {"Type": "vxlan"}}'
 
-etcdctl --ca-file={{install_dir}}/flannel/conf/etcd-ca.pem --cert-file={{install_dir}}/flannel/conf/etcd.pem \
+{{install_dir}}/etcd/bin/etcdctl --ca-file={{install_dir}}/flannel/conf/etcd-ca.pem --cert-file={{install_dir}}/flannel/conf/etcd.pem \
         --key-file={{install_dir}}/flannel/conf/etcd-key.pem \
         --endpoints="{% for host in groups['etcd'] %}https://{{ hostvars[host].inventory_hostname }}:2379{% if not loop.last %},{% endif %}{% endfor %}" \
         get /coreos.com/network/config
