--- a/playbook/roles/kubelet/templates/kubelet-config.yaml.j2
+++ b/playbook/roles/kubelet/templates/kubelet-config.yaml.j2
@@ -5,7 +5,7 @@ port: 10250
 readOnlyPort: 10255
 cgroupDriver: cgroupfs
 clusterDNS:
-- 10.0.0.2
+- 10.2.0.2
 clusterDomain: cluster.local 
 failSwapOn: false
 authentication:
@@ -27,4 +27,6 @@ evictionHard:
   nodefs.available: 10%
   nodefs.inodesFree: 5%
 #maxOpenFiles: 1000000
-#maxPods: 110
+maxPods: 200
+serverTLSBootstrap: true
+authentication-token-webhook: true
